# pingdomcli

./: .gitignore  README.md  conf-dist.yaml  pyproject.toml
docs/source/: index.rst
pingdombot/: bot.py
